@@ -1472,10 +1472,17 @@
       (message
        "** WARNING: epacakge.el has not been designed to work with XEmacs")))
 
+(eval-and-compile
+  (unless (fboundp 'called-interactively-p) ; Emacs < 23
+    (defun called-interactively-p (&rest args)
+      "Emacs < 23.2 compatibility. ARGS are ignored."
+      (let ((function 'interactive-p))
+	(funcall function)))))
+
 (defconst epackage-version "1.5"
   "Standard Emacs inversion.el supported verison number.")
 
-(defconst epackage--version-time "2012.0106.2009"
+(defconst epackage--version-time "2012.0107.0040"
   "Package's version number in format YYYY.MMDD.HHMM.")
 
 (defconst epackage--maintainer "jari.aalto@cante.net"
@@ -2574,13 +2581,6 @@ Description: <short one line>
   "Run BODY with `case-fold-search' set to nil."
   `(let (case-fold-search)
      ,@body))
-
-(defmacro epackage-interactive-p ()
-  "Emacs compatibility.
-`interactive-p' is obsolete in 23.2"
-  (if (string< emacs-version "23.2")
-      `(interactive-p)
-    `(called-interactively-p 'interactive)))
 
 (defmacro epackage-nconc (list place)
   "Add LIST to PLACE, modify PLACE."
@@ -4374,7 +4374,7 @@ If VERBOSE is non-nil, display informational messages."
       (epackage-autoload-generate-loaddefs-file-list
        file
        list
-       (or verbose (epackage-interactive-p))))))
+       (or verbose (called-interactively-p 'interactive))))))
 
 ;; Copy of ti::package-autoload-create-on-file
 (defun epackage-autoload-create-on-file (file buffer)
@@ -4631,7 +4631,7 @@ Input:
   (epackage-error-if-invalid-package-name package)
   (or dir
       (setq dir root))
-  (if (epackage-interactive-p)
+  (if (called-interactively-p 'interactive)
       (setq verbose t))
   (epackage-error-if-not-directory root)
   (epackage-error-if-not-directory dir)
@@ -4677,7 +4677,7 @@ Input:
   (epackage-error-if-invalid-package-name package)
   (or dir
       (setq dir root))
-  (if (epackage-interactive-p)
+  (if (called-interactively-p 'interactive)
       (setq verbose t))
   (epackage-error-if-not-directory root)
   (epackage-error-if-not-directory dir)
@@ -4729,7 +4729,7 @@ Input:
   (epackage-error-if-invalid-package-name package)
   (or dir
       (setq dir root))
-  (if (epackage-interactive-p)
+  (if (called-interactively-p 'interactive)
       (setq verbose t))
   (epackage-error-if-not-directory root)
   (epackage-error-if-not-directory dir)
@@ -4771,7 +4771,7 @@ Input:
       root
       root
       'interactive)))
-  (if (epackage-interactive-p)
+  (if (called-interactively-p 'interactive)
       (setq verbose t))
   (or dir
       (setq dir root))
@@ -4884,7 +4884,7 @@ Notes:
 	 (exclude (epackage-read-file-content-regexp
 		   (epackage-layout-file-name root package 'ignore)))
 	 list)
-    (if (epackage-interactive-p)
+    (if (called-interactively-p 'interactive)
 	(setq verbose t))
     (epackage-make-directory edir 'error)
     (epackage-with-buffer-autoload
@@ -5276,7 +5276,7 @@ Notes:
   Do nothing if file already exists."
   (interactive "sEpackage name: \nDLisp package root dir: ")
   (epackage-error-if-invalid-package-name package)
-  (if (epackage-interactive-p)
+  (if (called-interactively-p 'interactive)
       (setq verbose 'interactive))
   (let ((file (format "%s%s/%s"
 			(file-name-as-directory dir)
@@ -5325,7 +5325,7 @@ Input:
   DIR		Package root directory.
   VERBOSE	Optional. If non-nil, display informational messages."
   (interactive "sEpackage name: \nDLisp package root dir: \n")
-  (if (epackage-interactive-p)
+  (if (called-interactively-p 'interactive)
       (setq verbose 'interactive))
   (let ((alist (epackage-devel-information-buffer)))
     (epackage-devel-compose-package-info package dir verbose alist)))
@@ -5342,7 +5342,7 @@ Input:
   VERBOSE	Optional. If non-nil, display informational messages."
   (interactive
    "sEpackage name: \nDLisp package root dir: \nfSource *.el file: ")
-  (if (epackage-interactive-p)
+  (if (called-interactively-p 'interactive)
       (setq verbose 'interactive))
   (with-temp-buffer
     (insert-file-contents file)
@@ -5362,7 +5362,7 @@ Input:
   VERBOSE	Optional. if non-nil, display informational messages.
   ALIST		Optional. See`epackage-devel-information-buffer'."
   (interactive "sEpackage name: \nDLisp package root dir: ")
-  (if (epackage-interactive-p)
+  (if (called-interactively-p 'interactive)
       (setq verbose 'interactive))
   (epackage-error-if-invalid-package-name package)
   (let ((list
@@ -5416,7 +5416,7 @@ Return:
 
   alist    See function `epackage-devel-information-buffer'."
   (interactive "DLisp package root dir to import: ")
-  (if (epackage-interactive-p)
+  (if (called-interactively-p 'interactive)
       (setq verbose 'interactive))
   (unless (file-directory-p dir)
     (epackage-error "No such directory %s" dir))
@@ -5512,7 +5512,7 @@ Notes:
   (epackage-error
    (concat "Disabled due to lisp files being imported lacking proper "
 	   "structure. Please use epackage-devel-compose-package-dir instead"))
-  (if (epackage-interactive-p)
+  (if (called-interactively-p 'interactive)
       (setq verbose 'interactive))
   (unless (file-directory-p dir)
     (epackage-error "[compose-main] No such directory %s" dir))
@@ -6664,7 +6664,7 @@ If invalid, return list of classified problems:
   'info     Missing file or required fields in info file.
   'git      Missing required Git branches: upstream, master."
   (interactive "DLint epackage directory: ")
-  (if (epackage-interactive-p)
+  (if (called-interactively-p 'interactive)
       (setq verbose 'interactive))
   (let ((edir (format "%s%s"
                       (file-name-as-directory dir)
@@ -8841,11 +8841,13 @@ Summary, Version, Maintainer etc."
 
 (defun epackage-batch-devel-compose-package-dir ()
   "Run `epackage-devel-compose-package-dir' for first command line arg.
-The argument must be full path name to a *.el file."
+The arguments:
+  0  Package name
+  1  Directory roo."
   (let ((name (nth 0 command-line-args-left))
 	(path (nth 1 command-line-args-left))
-	dir
-	file)
+	(root (nth 2 command-line-args-left))
+	dir)
     (let ((i 0))
       (dolist (elt command-line-args-left)
 	(epackage-message "ARG %d: %s" i elt)
@@ -8855,16 +8857,12 @@ The argument must be full path name to a *.el file."
     (unless (epackage-package-name-valid-p name)
       (epackage-error "Invalid PACKAGE NAME: %s" name))
     (unless (stringp path)
-      (epackage-error "FILE argument 2 is missing"))
-    (unless (string-match "^\\(.*/\\)\\(.+\\.el\\)" path)
-      (epackage-message "Warn: Not a full path name: %s" path))
-    (setq dir (match-string 1 path)
-	  file (match-string 2 path))
-    (if (string-match "^\\./?$" dir)
-	(setq dir default-directory))
-    (if (not (file-exists-p path))
-	(epackage-message "No such file: %s" path)
-      (epackage-devel-compose-package-dir name dir))))
+      (epackage-error "FILE Argument 2 is missing"))
+    (unless (file-directory-p path)
+      (epackage-error "Warn: No such directory: %s" path))
+    (if (string-match "^\\./?$" path)
+	(setq path default-directory))
+    (epackage-devel-compose-package-dir name path)))
 
 (defun epackage-batch-devel-lint-lisp ()
   "Run `epackage-lint-extra-file' for all command line args."
