@@ -1,3 +1,8 @@
+2012-01-07 Sat  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-interactive-p): Remove.
+	(called-interactively-p): Add defun if nor defined.
+
 2012-01-06 Fri  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage--layout-template-info): Rename field
